
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx 0.9.6.2 (rev 3359)
====================================
* Update ajaxSearch to 1.7.0.2 and Search Highlighting plugin to 1.2.0.2 (3386,3387)
* Update Ditto/Reflect to version 2.1 (3377)
* [FS#988] Changed htmlspecialchars() on Search Highlighting plugin to strip_tags() (3359)
* Fix demo content error with web signup (see http://modxcms.com/forums/index.php/topic,22374.msg137890.html)
* Update IE6 (and earlier) helper files for transparent png support and for adding :hover, :active, :focus support to all elements (not just links/inputs)
* [FS#905] sqlParser.class.php now typecasting (float) instead of floatval() [PHP < 4.2] (3338)
* Updated rss.inc.php to handle 404 errors if the feeds cannot be found (3317)
* [FS#947] Module permissions did not handle multiple user groups (3314)
* [FS#977] Updated handling for apostrophes in Full Name (user/web user) and resource categories (3309)
    - Removed redundant mysql_escape_string() from the (web)users and Resources save processors 
    - Added stripslashes() to categories.inc.php getCategories() function
    - Added stripslashes() to resources.static.php 
* [FS#988] Use htmlspecialchars() on Search Highlighting plugin parameters and updated version included in the distribution (3303)
* [FS#998] Update ListIndexer version included in the distribution (3302)
* [FS#996] Update installer to detect register_globals being on during installation (3301)
* Added RSS feeds of Security and Announcements forums messages to manager welcome page with required English language file additions in installer. (3295, 3296, 3298, 3299, 3300)
* Migrated Mootools to 1.11 (3293, 3294)
* Fix for tree menu scrolling (credit smashingred ... thanks!). See http://modxcms.com/forums/index.php/topic,21735.msg134298.html#msg134298 (3292)