@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx 0.9.6.2 (rev 3359)
 ====================================
+* Set the published status of duplicated documents to unpublished (3388)
 * Update ajaxSearch to 1.7.0.2 and Search Highlighting plugin to 1.2.0.2 (3386,3387)
 * Update Ditto/Reflect to version 2.1 (3377)
 * [FS#988] Changed htmlspecialchars() on Search Highlighting plugin to strip_tags() (3359)
